syntax = "proto3";

package ws;

// Message used to request a WebSocket connection.
message WebSocketRequest {
  WebSocketChannel channel = 1;
  WebSocketAction action = 2;
  WebSocketRequestModelData data = 3;

  /**
   * The cannel used to stream the data from.
   * Used to define the model type.
   */
  enum WebSocketChannel {
    WEB_SOCKET_CHANNEL_STORAGE = 0;
  }
  // The action the connection should fulfill.
  enum WebSocketAction {
    // Only keep the data up to date.
    WEB_SOCKET_ACTION_SYNC = 0;
    // Keep the data up to date and validate changes.
    WEB_SOCKET_ACTION_VALIDATE = 1;
  }
  // Additional data.
  message WebSocketRequestModelData {
    // The id of the model.
    optional int32 id = 1;
    // TRUE if a model does not exist.
    optional bool new = 2;
  }
}
